# FitHBonds

./: .gitignore  AGENTS.md  README.md
cl/: FitREQ.cl
cpp/: CMakeLists.txt  IO_utils.h
cpp/common_resources/: cl
cpp/math/: Forces.h
cpp/molecular/: FitREQ.h  MMFFBuilderBase.h  MMFFparams.h
data/mol/: H2O.mol2
doc/: status.md
doc/ideas/: Polynominal_AOs.md  RigidAtomHfunc.md
pyBall/: FitREQ.py  atomicUtils.py
pyBall/OCL/: FittingDriver.py  MMparams.py  NonBondFitting.py
tests/PolynominalBasis/: plot_polynomial_basis.py
tests/RigidAtomHfunc/: h2o_sp3_viewer.html  plot_H2O_sp3.py
tests/tFitREQ/: opt_2D_2.py  opt_mini.py  plot_ocl_energy.py  split_scan_imshow_new.py
web/HBondPlay/: README.md  app.js  index.html  molecule.js  shader.frag  style.css
web/HBondPlay/data/xyz/: CH2NH.xyz  CH2NH_epairs.xyz  CH2O_epairs.xyz  H2O_epairs.xyz  HCN_epairs.xyz  HF_epairs.xyz
